--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="https://JhonatanBellaiza.github.io/W1D1/quiz1.html">Quiz 1</a>
-    <a href="https://JhonatanBellaiza.github.io/W1D1/quiz2.html">Quiz 1</a>
-    <a href="https://JhonatanBellaiza.github.io/W1D1/quizExercise2.html">Quiz 1</a>
+    <a href="https://JhonatanBellaiza.github.io/W1D1/quizExercise2.html">Quiz 2</a>
+    <a href="https://JhonatanBellaiza.github.io/W1D1/quiz3">Quiz 3</a>
 </body>
 </html>
