--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://JhonatanBellaiza.github.io/W1D1/quiz1.html">Quiz 1</a>
-    <a href="https://JhonatanBellaiza.github.io/W1D1/quiz2.html">Quiz 2</a>
-    <a href="https://JhonatanBellaiza.github.io/W1D1/quiz3">Quiz 3</a>
+    <a href="https://JhonatanBellaiza.github.io/W1D1/index.html">W1D1-html</a>
+    <a href="https://JhonatanBellaiza.github.io/W1D2/quiz2.html">W1D2-CSS</a>
+    <a href="https://JhonatanBellaiza.github.io/presentation1/index.html">Presentation</a>
 </body>
 </html>
