--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="https://JhonatanBellaiza.github.io/W1D1/index.html">W1D1-html</a>
-    <a href="https://JhonatanBellaiza.github.io/W1D2/quiz2.html">W1D2-CSS</a>
+    <a href="https://JhonatanBellaiza.github.io/W1D2/index.html">W1D2-CSS</a>
     <a href="https://JhonatanBellaiza.github.io/presentation1/index.html">Presentation</a>
 </body>
 </html>
