--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <a href="https://JhonatanBellaiza.github.io/W1D1/index.html">W1D1-html</a>
-    <a href="https://JhonatanBellaiza.github.io/W1D2/index.html">W1D2-CSS</a>
-    <a href="https://JhonatanBellaiza.github.io/presentation1/index.html">Presentation</a>
+<body style="display: flow-root; gap: 10px; ">
+    <div>
+        <a href="https://JhonatanBellaiza.github.io/W1D1/index.html">W1D1-html</a>
+    </div>
+    <div>
+        <a href="https://JhonatanBellaiza.github.io/W1D2/index.html">W1D2-CSS</a>
+    </div>
+    <div>
+        <a href="https://JhonatanBellaiza.github.io/presentation1/index.html">Presentation 1</a>
+    </div>
+    <div>
+        <a href="https://JhonatanBellaiza.github.io/W2D4/presentation.html">Presentation-2-Timer</a>
+    </div>
+
 </body>
 </html>
